# VLXI-TEMPLATE-C-CXX

./: CHANGE_LOG  CMakeLists.txt  LICENSE-THIRD-PARTY.template  README.md  README.md.template
cmake/: XYZConfigExtras.cmake
include/: pkg_config.h.in  xyz_config.h.in
src/: CMakeLists.txt
src/math/: CMakeLists.txt  xyz_math.cc  xyz_math.h
template-docs/: LICENSE-C-C++-Template  README-C-C++-Template.md  RELEASE-NOTES-C-C++-Template.md
tests/: CMakeLists.txt
tests/math/: CMakeLists.txt  test_xyz_math.cc
